web(css): fix `text-align`

--- a/webapp/styles/index.css
+++ b/webapp/styles/index.css
@@ -4,7 +4,6 @@ body {
   padding: 0;
   scroll-behavior: smooth;
   min-height: 100vh;
-  text-align: center;
   padding-top: 140px;
   padding-bottom: 250px;
 
